Commit con agregados de flex y grid

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,11 +8,12 @@
     <link rel="shortcut icon" href="../assets/img/logo LP.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-success">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html">
                 <img src="../assets/img/logo LP.png" alt="Logo Lucas Patanó">
@@ -23,19 +24,19 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link active anclaNavbar" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="sobre-mi.html">Sobre mi</a>
+                    <a class="nav-link anclaNavbar" href="sobre-mi.html">Sobre mi</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="coaching-y-mentorias.html">Coaching y Mentorías</a>
+                    <a class="nav-link anclaNavbar" href="coaching-y-mentorias.html">Coaching y Mentorías</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contenido.html">Contenido</a>
+                    <a class="nav-link anclaNavbar" href="contenido.html">Contenido</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link anclaNavbar" href="#">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -46,7 +47,7 @@
         <h1 class="titulares">Contacto</h1>
         <br>
         <div>
-            <p class="texto-sencillo parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, vero distinctio, rerum omnis nam ullam
+            <p class="textoSencillo parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, vero distinctio, rerum omnis nam ullam
             atque quibusdam dolorum minus reiciendis magnam placeat. Maxime quam est quas excepturi non nobis
             magnam.</p>
             <br>
