--- a/pages/contenido.html
+++ b/pages/contenido.html
@@ -8,11 +8,12 @@
     <link rel="shortcut icon" href="../assets/img/logo LP.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-success">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html">
                 <img src="../assets/img/logo LP.png" alt="Logo Lucas Patanó">
@@ -22,20 +23,20 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  <li class="nav-item anclaNavbar">
+                    <a class="nav-link active anclaNavbar" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="sobre-mi.html">Sobre mi</a>
+                    <a class="nav-link anclaNavbar anclaNavbar" href="sobre-mi.html">Sobre mi</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="coaching-y-mentorias.html">Coaching y Mentorías</a>
+                    <a class="nav-link anclaNavbar anclaNavbar" href="coaching-y-mentorias.html">Coaching y Mentorías</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contenido</a>
+                    <a class="nav-link anclaNavbar anclaNavbar" href="#">Contenido</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a class="nav-link anclaNavbar anclaNavbar" href="contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -46,28 +47,27 @@
         <h1 class="titulares">Artículos, noticias fintech y mucho más</h1>
         <br>
         <h2 class="servicios">Mis Artículos</h2>
-        <div class="parrafo texto-sencillo">
-            <article>
-                <h1>Título de artículo 1</h1>
-                <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum perferendis minima, suscipit
-                    obcaecati, laudantium esse similique sequi temporibus illum rem, explicabo animi quibusdam ad
-                    sapiente assumenda totam aliquam fugit sint.</p>
-            </article>
-            <article>
-                <h1>Título de artículo 2</h1>
-                <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum perferendis minima, suscipit
-                    obcaecati, laudantium esse similique sequi temporibus illum rem, explicabo animi quibusdam ad
-                    sapiente assumenda totam aliquam fugit sint.</p>
-            </article>
-            <article>
-                <h1>Título de artículo 3</h1>
-                <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum perferendis minima, suscipit
-                    obcaecati, laudantium esse similique sequi temporibus illum rem, explicabo animi quibusdam ad
-                    sapiente assumenda totam aliquam fugit sint.</p>
-            </article>
+        <div class="cards-container">
+          <div class="cardArticulo">
+            <img src="../assets/img/fotoArticulo1Chica.png" alt="Imagen de artículo sobre Prooduct Management">
+            <h2>Desbloqueando tu potencial: Cómo la formación en Product Management puede impulsar tu carrera hacia nuevas alturas 🚀</h2>
+            <a href="https://www.linkedin.com/pulse/desbloqueando-tu-potencial-c%25C3%25B3mo-la-formaci%25C3%25B3n-en-product-lucas-patan%25C3%25B3/?trackingId=cFgJfyzcQM%2ByRTeKafcb6A%3D%3D" target="_blank"><strong>Leer artículo</strong></a>
+          </div>
+          <div class="cardArticulo">
+            <img src="../assets/img/fotoArticulo2.png" alt="Imagen de artículo sobre Producto y UX">
+            <h2>Diseñando juntos: Producto y UX 🤩</h2>
+            <a href="https://www.linkedin.com/pulse/dise%25C3%25B1ando-juntos-producto-y-ux-lucas-patan%25C3%25B3/?trackingId=cFgJfyzcQM%2ByRTeKafcb6A%3D%3D" target="_blank"><strong>Leer artículo</strong></a>
+          </div>
+          <div class="cardArticulo">
+            <img src="../assets/img/fotoArticulo3.png" alt="Imagen de artículo sobre Growth">
+            <h2>Psicología de Usuario y Growth 🧠🚀</h2>
+            <a href="https://www.linkedin.com/pulse/psicolog%25C3%25ADa-de-usuario-y-growth-lucas-patan%25C3%25B3/?trackingId=cFgJfyzcQM%2ByRTeKafcb6A%3D%3D" target="_blank"><strong>Leer artículo</strong></a>
+          </div>
+          <div class="cardArticulo">
+            <img src="../assets/img/fotoArticulo4.png" alt="Imagen de artículo sobre Tips para un perfil de Producto en LinkedIn">
+            <h2>10 Tips para tener un perfil de Producto atractivo en Linkedin 🚀</h2>
+            <a href="https://www.linkedin.com/pulse/10-tips-para-tener-un-perfil-de-producto-atractivo-en-lucas-patan%25C3%25B3/?trackingId=cFgJfyzcQM%2ByRTeKafcb6A%3D%3D" target="_blank"><strong>Leer artículo</strong></a>
+          </div>
         </div>
         <br><hr>
         <section>
