--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -7,10 +7,11 @@
     <link rel="shortcut icon" href="../assets/img/logo LP.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-success">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html">
                 <img src="../assets/img/logo LP.png" alt="Logo Lucas Patanó">
@@ -21,19 +22,19 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link active anclaNavbar" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre mi</a>
+                    <a class="nav-link anclaNavbar" href="#">Sobre mi</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="coaching-y-mentorias.html">Coaching y Mentorías</a>
+                    <a class="nav-link anclaNavbar" href="coaching-y-mentorias.html">Coaching y Mentorías</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contenido.html">Contenido</a>
+                    <a class="nav-link anclaNavbar" href="contenido.html">Contenido</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a class="nav-link anclaNavbar" href="contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -42,24 +43,22 @@
     </header>
     <main>
         <h1 class="titulares">Sobre mi</h1>
-        <div class="presentacion-lucas">
-            <figure class="foto-lucas">
+        <div class="presentacionLucas">
+            <figure class="fotoLucas">
                 <img src="../assets/img/Lucas Patano web.jpeg" alt="Imagen de Lucas Patanó">
             </figure>
             <div class="curriculum">
-                <div class="texto-sencillo">
-                    <h2>¿Quién es Lucas?</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis tempore natus qui numquam explicabo beatae nobis. Quam suscipit, deserunt dolor non aspernatur laboriosam porro culpa, minima quo sed minus excepturi!</p>
-                </div>
-                <br>
-                <div class="texto-sencillo">
-                    <h2>Estudios</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem suscipit deserunt perspiciatis repudiandae tempora animi omnis sapiente dolorem beatae aperiam sint necessitatibus, qui quae similique saepe illum amet laboriosam vel.</p>
-                </div>
-                <br>
-                <div class="texto-sencillo">
-                    <h2>Trayectoria Laboral</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, veritatis repellat debitis culpa veniam in eligendi labore deleniti dolorem praesentium neque? Ducimus ab perspiciatis placeat dolore blanditiis eos impedit nulla.</p>
+                <div class="textoSencillo">
+                    <h3>Gestión de Productos 💡 + Liderazgo 🏔 + Fintech 🌠 + Medios de Pago 💳 + Coaching & Mentoring 🧠 ♥️ + Growth 🚀 + Podcast 🎙</h3>
+                    <div class="presentacion">
+                      <p>Soy un profesional con más de 10 años de experiencia desarrollando productos para la Industria Financiera, tanto B2C como B2B.
+                        Me apasiona conformar y liderar equipos de Producto y UX, enfocados en los usuarios y en la data, con el objetivo de construir productos maravillosos.
+                        <br><br>
+                        Como Product Coach mi propósito es ayudar a las personas que trabajan en producto (CEOs, CPOs, Product Managers, Product Owners) a abordar desafíos y solucionar problemas, a desarrollar su estrategia de producto, a escalar y consolidar equipos de producto y UX, a crear comunidad de producto con mentalidad de growth en las organizaciones y también a implementar metodologías para construir las mejores soluciones pensando en los usuarios.</p>
+                    </div>
+                    <div class="experienciaLaboral">
+                      <img src="../assets/img/trayectoria (1).png" alt="Trayectoria de Lucas">
+                    </div>
                 </div>
             </div>
         </div>
