--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./assets/img/logo LP.png">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-success">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
                 <img src="./assets/img/logo LP.png" alt="Logo Lucas Patanó">
@@ -23,19 +24,19 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active anclaNavbar" aria-current="page" href="#">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/sobre-mi.html">Sobre mi</a>
+                    <a class="nav-link anclaNavbar" href="./pages/sobre-mi.html">Sobre mi</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/coaching-y-mentorias.html">Coaching y Mentorías</a>
+                    <a class="nav-link anclaNavbar" href="./pages/coaching-y-mentorias.html">Coaching y Mentorías</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/contenido.html">Contenido</a>
+                    <a class="nav-link anclaNavbar" href="./pages/contenido.html">Contenido</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                    <a class="nav-link anclaNavbar" href="./pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -45,19 +46,18 @@
 
     <main>
         <section class="encabezado">
-            <h1 class="display-2 titular-web"><strong>PRODUCTO, ESTRATEGIA Y LIDERAZGO</strong></h1>
-            <p class="lead texto-principal-web">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, possimus. Vitae inventore ipsam dolor sapiente, porro quas quis animi officiis aliquid perspiciatis sed commodi veniam vero cum molestias suscipit dignissimos!
-            Consectetur officiis delectus expedita a itaque beatae, pariatur doloribus voluptas non magnam voluptatum accusamus nostrum explicabo! Temporibus cupiditate nulla consectetur ipsum, officiis, magni soluta placeat praesentium, molestias accusamus quis cumque!</p>
+            <h1 class="titularWeb"><strong>PRODUCTO, ESTRATEGIA Y LIDERAZGO</strong></h1>
+            <p class="lead textoPrincipalWeb">Los que trabajamos en producto nos enfrentamos a diario con enormes desafíos, para los cuales se necesitan soluciones modernas, con metodologías adaptadas a la cultura de las empresas/equipos y con velocidad de reacción, para poder llegar al objetivo de crear productos que enamoren a los usuarios.</p>
         </section>
-        <hr>
+
         <section>
             <h2 class="servicios">CÓMO TE PUEDO AYUDAR</h2>
-            <div class="row">
+            <div class="row mt-2 mb-5 mx-2">
                 <div class="col-sm-3 mb-3 mb-sm-0">
                   <div class="card h-100 border-success">
                     <div class="card-body">
                       <h5 class="card-title">Contenido</h5>
-                      <p class="card-text">Encuenta contenido sobre producto, experiencia de usuario, estrategia y growth</p>
+                      <p class="card-text">Encuenta contenido sobre producto, experiencia de usuario, estrategia y growth.</p>
                       <a href="./pages/contenido.html" class="btn btn-success">IR</a>
                     </div>
                   </div>
@@ -90,10 +90,9 @@
                     </div>
                   </div>
               </div>
-            
         </section>
     </main>
-    <br><br><br>
+    <hr>
     <footer>
         <div class="iconos">
             <i class="fa-brands fa-linkedin fa-2xl" style="color: #2b68ca;"></i>
