--- a/pages/coaching-y-mentorias.html
+++ b/pages/coaching-y-mentorias.html
@@ -7,10 +7,12 @@
     <link rel="shortcut icon" href="../assets/img/logo LP.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
+
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-success">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html">
                 <img src="../assets/img/logo LP.png" alt="Logo Lucas Patanó">
@@ -21,19 +23,19 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link active anclaNavbar" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="sobre-mi.html">Sobre mi</a>
+                    <a class="nav-link anclaNavbar" href="sobre-mi.html">Sobre mi</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Coaching y Mentorías</a>
+                    <a class="nav-link anclaNavbar" href="#">Coaching y Mentorías</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contenido.html">Contenido</a>
+                    <a class="nav-link anclaNavbar" href="contenido.html">Contenido</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a class="nav-link anclaNavbar" href="contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -42,17 +44,20 @@
     </header>
     <main>
         <h1 class="titulares">Coaching y Mentorías</h1>
-        <div class="video-centrado">
+        <div class="videoCentrado">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/qbmB8uy9Yvk?si=jkxM5Q9ZBm42R_nt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div>
+          <p class="textoSencillo">Disfruta este podcast de producto y tecnología en español que hacemos con Crisva Valle, para todos aquellos que trabajan en producto o quieren comenzar a hacerlo.</p>
         </div>
         <hr>
         <h2 class="servicios">Agenda tu primer sesión <strong>GRATUITA</strong></h2>
         <div class="coach">
             <div class="sesion-coach">
-            <p class="texto-sencillo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laborum fuga voluptatum quidem ipsum praesentium eos, quos sapiente quod soluta minus, ut error! Fugit error provident, quod libero nobis praesentium.</p>
+            <p class="textoSencillo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laborum fuga voluptatum quidem ipsum praesentium eos, quos sapiente quod soluta minus, ut error! Fugit error provident, quod libero nobis praesentium.</p>
             </div>
             <div>
-            <a class="texto-sencillo" href="https://calendly.com/lucaspatano/cafevirtual?month=2023-10" target="_blank">AGENDA AQUI</a>
+            <a class="textoSencillo" href="https://calendly.com/lucaspatano/cafevirtual?month=2023-10" target="_blank">AGENDA AQUI</a>
             </div>
         </div>
         <hr>
