Ultimo commit para pre-entrega 2

--- a/pages/coaching-y-mentorias.html
+++ b/pages/coaching-y-mentorias.html
@@ -44,43 +44,61 @@
     </header>
     <main>
         <h1 class="titulares">Coaching y Mentorías</h1>
-        <div class="videoCentrado">
+        <div class="ratio ratio-4x3 videoCentrado">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/qbmB8uy9Yvk?si=jkxM5Q9ZBm42R_nt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-        <div>
-          <p class="textoSencillo">Disfruta este podcast de producto y tecnología en español que hacemos con Crisva Valle, para todos aquellos que trabajan en producto o quieren comenzar a hacerlo.</p>
         </div>
         <hr>
         <h2 class="servicios">Agenda tu primer sesión <strong>GRATUITA</strong></h2>
+
         <div class="coach">
             <div class="sesion-coach">
-            <p class="textoSencillo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laborum fuga voluptatum quidem ipsum praesentium eos, quos sapiente quod soluta minus, ut error! Fugit error provident, quod libero nobis praesentium.</p>
+            <p class="textoSencillo parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laborum fuga voluptatum quidem ipsum praesentium eos, quos sapiente quod soluta minus, ut error! Fugit error provident, quod libero nobis praesentium.</p>
             </div>
             <div>
-            <a class="textoSencillo" href="https://calendly.com/lucaspatano/cafevirtual?month=2023-10" target="_blank">AGENDA AQUI</a>
+            <a class="textoSencillo" href="https://calendly.com/lucaspatano/cafevirtual?month=2023-10" target="_blank"><strong>INGRESA AQUI Y AGENDA TU PRIMERA SESION 🗓️</strong></a>
             </div>
         </div>
         <hr>
         <h3 class="servicios">Reseñas</h3>
         <br>
-        <div class="como-te-ayudo">
-            <div class="card-servicios">
-            <h4>Persona A</h4>
-            <p>Acá va reseña</p>
+        <div class="row row-cols-1 row-cols-md-2 g-4 mx-1">
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Matteo Arango 🇨🇴</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Head of Growth & Co-founder en TROOP</h6>
+                <p class="card-text">Si estás buscando un experto en producto que tenga conocimientos sobre fintech y que realmente se interese por tus problemas, Lucas es el mentor que estás buscando!</p>
+              </div>
             </div>
-            <div class="card-servicios">
-            <h4>Persona B</h4>
-            <p>Acá va  reseña</p>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Jonathan Piña 🇺🇸</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Marketing Manager en The Walker Group</h6>
+                <p class="card-text">Lucas es un pibe genial en fintech, entiende lo mcroy micro, y para los que estamos en esta industria, eso es dificil de encontrar. Si están en fintech, a ojos cerrados les recomiendo conversar con él.</p>
+              </div>
             </div>
-            <div class="card-servicios">
-            <h4>Persona C</h4>
-            <p>Acá va reseña</p>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Lucila Goicoechea 🇦🇷</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Scrum Product Owner en Agro-Pro</h6>
+                <p class="card-text">Lucas investigó acerca del proyecto y me ayudó a repensar los OKRs de la compañia, fue muy claro. Me llevé muchos accionables. En mi caso no  tenía que ver con fintech sino con agtech, y con su experiencia en otra industro me fue de gran ayuda igualmente.</p>
+              </div>
             </div>
-            <div class="card-servicios">
-            <h4>Persona D</h4>
-            <p>Acá va reseña</p>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Paulo Torres 🇵🇪</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Founder en Plazabid</h6>
+                <p class="card-text">Un crack Lucas, hizo un análisis previo de la empresa, me ayudó a replantear algunas estrategias de adquisición, me hixo dar cuenta que debíamos dar un paso atrás para redefibir el buyer persona. Recomendadísimo!</p>
+              </div>
             </div>
-        </div>        
+          </div>
+        </div>
     </main>
     <br><br><br>
     <footer>
