--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -51,9 +51,11 @@
             atque quibusdam dolorum minus reiciendis magnam placeat. Maxime quam est quas excepturi non nobis
             magnam.</p>
             <br>
-            <form action="" class="formulario">
+            <div class="contenedorFormularios">
+              <form action="" class="formulario">
                 <label for="nombre">Nombre</label>
                 <input type="text" name="nombre" id="nombre" required>
+                <br><br>
                 <label for="apellido">Apellido</label>
                 <input type="text" name="apellido" id="apellido" required>
                 <br><br>
@@ -82,6 +84,8 @@
                 <input type="submit" value="Enviar">
                 <input type="reset" value="Borrar todo">
             </form>
+          </div>
+            
         </div>
    </main>
    <br><br><br>
