--- a/pages/contenido.html
+++ b/pages/contenido.html
@@ -72,28 +72,30 @@
         <br><hr>
         <section>
             <h2 class="servicios">Hackeando Productos</h2>
-            <div class="hackeando-fintech">
-                <div>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/KL7siO0u6eo?si=QCwMtIbxjneECjLV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </div>
-                <div>
-                    <h3 class="texto-sencillo">Escucha todos los episodios aquí:</h3>
-                    <br>
-                    <a class="texto-sencillo" href="https://open.spotify.com/show/6MSn0GCobgEfJNlddXg0eW?si=15df2f94eb6948ef" target="_blank">Spotify</a>
-                    <br><br>
-                    <a class="texto-sencillo" href="https://go.ivoox.com/sq/1762088" target="_blank">iVoox</a>
-                    <br><br>
-                    <a class="texto-sencillo" href="https://podcasts.apple.com/cl/podcast/hackeando-productos/id1690104248" target="_blank">Apple Podcast</a>
-                </div>
-                <br>
+            <div class="ratio ratio-4x3 videoCentrado">
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/KL7siO0u6eo?si=QCwMtIbxjneECjLV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
+            <div>
+              <h3 class="texto-sencillo textoCentrado">Escucha todos los episodios aquí:</h3>
+            </div>
+            <br>
+            <div class="textoCentrado">
+              <a class="texto-sencillo" href="https://open.spotify.com/show/6MSn0GCobgEfJNlddXg0eW?si=15df2f94eb6948ef" target="_blank">Spotify</a>
+              <br><br>
+              <a class="texto-sencillo" href="https://go.ivoox.com/sq/1762088" target="_blank">iVoox</a>
+              <br><br>
+              <a class="texto-sencillo" href="https://podcasts.apple.com/cl/podcast/hackeando-productos/id1690104248" target="_blank">Apple Podcast</a>
+            </div>
+        <br>
         </section>
         <hr>
         <section>
             <h2 class="servicios">Noticias Fintech</h2>
-            <div class="hackeando-fintech">
+            <div class="ratio ratio-4x3 videoCentrado">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Nnb9A8I-x9Q?si=Malv1xojiJ_MksUd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h3 class="texto-sencillo">Ver todos las noticias <span><a href="https://www.youtube.com/@lucaspatano/videos" target="_blank"><strong>AQUI</strong></a></span></h3>
+            </div>
+            <div>
+                <h3 class="texto-sencillo textoCentrado">Ver todos las noticias <span><a href="https://www.youtube.com/@lucaspatano/videos" target="_blank"><strong>AQUI</strong></a></span></h3>
             </div>
         </section>
     </main>
