Agregando responsive en 2 html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <a class="navbar-brand" href="#">
                 <img src="./assets/img/logo LP.png" alt="Logo Lucas Patanó">
               </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler buttonNavbar" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
@@ -47,13 +47,13 @@
     <main>
         <section class="encabezado">
             <h1 class="titularWeb"><strong>PRODUCTO, ESTRATEGIA Y LIDERAZGO</strong></h1>
-            <p class="lead textoPrincipalWeb">Los que trabajamos en producto nos enfrentamos a diario con enormes desafíos, para los cuales se necesitan soluciones modernas, con metodologías adaptadas a la cultura de las empresas/equipos y con velocidad de reacción, para poder llegar al objetivo de crear productos que enamoren a los usuarios.</p>
+            <p class="textoPrincipalWeb">Los que trabajamos en producto nos enfrentamos a diario con enormes desafíos, para los cuales se necesitan soluciones modernas, con metodologías adaptadas a la cultura de las empresas/equipos y con velocidad de reacción, para poder llegar al objetivo de crear productos que enamoren a los usuarios.</p>
         </section>
 
         <section>
             <h2 class="servicios">CÓMO TE PUEDO AYUDAR</h2>
             <div class="row mt-2 mb-5 mx-2">
-                <div class="col-sm-3 mb-3 mb-sm-0">
+                <div class="col-sm-12 col-md-6 col-lg-3 mb-3">
                   <div class="card h-100 border-success">
                     <div class="card-body">
                       <h5 class="card-title">Contenido</h5>
@@ -62,7 +62,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-12 col-md-6 col-lg-3 mb-3">
                   <div class="card h-100 border-success">
                     <div class="card-body">
                       <h5 class="card-title">Coaching y Mentorías</h5>
@@ -71,7 +71,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-12 col-md-6 col-lg-3 mb-3">
                     <div class="card h-100 border-success">
                       <div class="card-body">
                         <h5 class="card-title">Trabajemos juntos</h5>
@@ -80,7 +80,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-12 col-md-6 col-lg-3 mb-3">
                     <div class="card h-100 border-success">
                       <div class="card-body">
                         <h5 class="card-title">Oportunidades laborales</h5>
