--- a/pages/coaching-y-mentorias.html
+++ b/pages/coaching-y-mentorias.html
@@ -17,7 +17,7 @@
               <a class="navbar-brand" href="../index.html">
                 <img src="../assets/img/logo LP.png" alt="Logo Lucas Patanó">
               </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler buttonNavbar" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
@@ -51,10 +51,10 @@
         <h2 class="servicios">Agenda tu primer sesión <strong>GRATUITA</strong></h2>
 
         <div class="coach">
-            <div class="sesion-coach">
-            <p class="textoSencillo parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laborum fuga voluptatum quidem ipsum praesentium eos, quos sapiente quod soluta minus, ut error! Fugit error provident, quod libero nobis praesentium.</p>
+            <div class="sesionCoach">
+            <p class="textoSencillo">El objetivo de esta primera sesión es poder conocernos un poco y entender los desafíos que tienes para saber si soy la persona que puede ayudarte a lograrlos. La duración aproximada de la misma es de 30 minutos.</p>
             </div>
-            <div>
+            <div class="agendaSesionCoach">
             <a class="textoSencillo" href="https://calendly.com/lucaspatano/cafevirtual?month=2023-10" target="_blank"><strong>INGRESA AQUI Y AGENDA TU PRIMERA SESION 🗓️</strong></a>
             </div>
         </div>
