--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,7 @@
               <a class="navbar-brand" href="../index.html">
                 <img src="../assets/img/logo LP.png" alt="Logo Lucas Patanó">
               </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler buttonNavbar" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
