--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Patanó | Product Management, Fintech y Product Coaching</title>
+    <title>Lucas Patano | Product Management, Fintech y Product Coaching</title>
+    <meta name="description" content="Ayudo conformar y liderar equipos de Producto y UX E en Latam, enfocados en los usuarios y en los datos con el objetivo de construir productos maravillosos.">
+    <meta name="keywords" content="management, estrategia, coaching, fintech, producto, ux, growth, podcast">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./assets/img/logo LP.png">
